Montagem do Site

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "loverboys",
   "version": "1.0.0",
-  "description": "Site da banda Loverboys\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[C\u001b[D de Indie, Pop e Rock Loverboys, de Blumenau - SC. www.loverboysband.com - contato@loverboysband.com",
+  "description": "Site da banda Loverboys de Indie, Pop e Rock, de Blumenau - SC. www.loverboysband.com - contato@loverboysband.com",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [
     "loverboys",
@@ -19,6 +19,7 @@
   "author": "Eric Castoldi",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "nodemon": "^1.11.0"
   }
 }
