--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ericcastoldi/loverboys.git"
+  },
   "keywords": [
     "loverboys",
     "loverboysband",
